--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.app.imkbapp.ui.home.HomeFragment"
+        android:name="com.app.imkbapp.ui.Home.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" >
         <action
@@ -21,7 +21,7 @@
 
     <fragment
         android:id="@+id/nav_detail"
-        android:name="com.app.imkbapp.ui.detail.DetailFragment"
+        android:name="com.app.imkbapp.ui.Detail.DetailFragment"
         android:label="@string/menu_gallery"
         tools:layout="@layout/fragment_detail" >
         <argument
